Fix HTML structure and improve formatting

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -76,16 +76,16 @@
 </head>
 <body>
 <header>
-	<img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
-	<nav aria-label="Navegación principal">
-		<a href="quienes-somos.html">Quiénes Somos</a>
-		<a href="index.html" >Menú</a>
-		<a href="promos.html">Promociones</a>
-		<a href="galeria.html">Galería</a>
-		<a href="contacto.html">Contáctanos</a>
-	</nav>
-	<h1>Salvadorean Bites</h1>
-	<p>Fresh. Local. Tasty.</p>
+    <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
+    <nav aria-label="Navegación principal">
+      <a href="index.html" >Menú</a>
+      <a href="galeria.html">Galería</a>
+      <a href="quienes-somos.html"aria-current="page" >Conócenos</a>
+      <a href="promos.html">Promociones</a>
+      <a href="contacto.html">Contáctanos</a>
+    </nav>
+    <h1>Salvadorean Bites</h1>
+    <p>Fresh. Local. Tasty.</p>
 </header>
 
 <main>
@@ -136,6 +136,7 @@
 </body>
 
 </html>
+
 
 
 
