--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" href="header&footer.css">
 	<style>
 
-	footer { background: #a83232; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
-            a.white-link { color: #fff; text-decoration: none; }
+	footer { background: #fff; color: #333; text-align: center; padding: 1rem; margin-top: 2rem; border-top: 1px solid #f1f1f1; }
+            footer a { color: #a83232; text-decoration: none; }
+            footer a:hover { color: #8c2a2a; }
 	:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
     *{box-sizing:border-box}
     body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text)}
@@ -76,16 +77,16 @@
 </head>
 <body>
 <header>
-    <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
-    <nav aria-label="Navegación principal">
-      <a href="index.html" >Menú</a>
-      <a href="galeria.html">Galería</a>
-      <a href="quienes-somos.html"aria-current="page" >Conócenos</a>
-      <a href="promos.html">Promociones</a>
-      <a href="contacto.html">Contáctanos</a>
-    </nav>
-    <h1>Salvadorean Bites</h1>
-    <p>Fresh. Local. Tasty.</p>
+	<img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
+	<nav aria-label="Navegación principal">
+		<a href="quienes-somos.html">Quiénes Somos</a>
+		<a href="index.html" >Menú</a>
+		<a href="promos.html">Promociones</a>
+		<a href="galeria.html">Galería</a>
+		<a href="contacto.html">Contáctanos</a>
+	</nav>
+	<h1>Salvadorean Bites</h1>
+	<p>Fresh. Local. Tasty.</p>
 </header>
 
 <main>
@@ -124,24 +125,18 @@
 	</section>
 </main>
 
-	<footer id="contacto" class="bg-danger text-light py-4">
+	<footer id="contacto">
         <div class="container text-center">
-            <p><a href="https://wa.me/50369739021" class="text-white text-decoration-none"><i class="bi bi-whatsapp"></i> ‪+503 6973-9021‬</a></p>
-            <p><a href="tel:‪+50322223333‬" class="text-white text-decoration-none"><i class="bi bi-telephone"></i> ‪+503 2222-3333‬</a></p>
-            <p><a href="mailto:contacto@salvadoreanbites.com" class="text-white text-decoration-none"><i class="bi bi-envelope"></i> contacto@salvadoreanbites.com</a></p>
-            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank" class="text-white text-decoration-none"><i class="bi bi-geo-alt"></i> Unicentro Soyapango, San Salvador</a></p>
+            <p><a href="https://wa.me/50369739021"><i class="bi bi-whatsapp"></i> ‪+503 6973-9021‬</a></p>
+            <p><a href="tel:‪+50322223333‬"><i class="bi bi-telephone"></i> ‪+503 2222-3333‬</a></p>
+            <p><a href="mailto:contacto@salvadoreanbites.com"><i class="bi bi-envelope"></i> contacto@salvadoreanbites.com</a></p>
+            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank"><i class="bi bi-geo-alt"></i> Unicentro Soyapango, San Salvador</a></p>
             <small>&copy; 2025 Salvadorean Bite. Todos los derechos reservados.</small>
         </div>
     </footer>
 </body>
 
 </html>
-
-
-
-
-
-
 
 
 
