--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -7,6 +7,21 @@
 	<link rel="stylesheet" href="header&footer.css">
 	<style>
 
+	#contacto {
+    background: #fff !important; /* ¡Fuerza el fondo blanco! */
+    color: var(--text); /* Texto oscuro (var(--text) = #333) */
+    text-align: center; 
+    padding: 1.5rem 1rem; /* Aumenté un poco el padding para mejor visualización */
+    margin-top: 2rem; 
+    border-top: 1px solid #f1f1f1; /* Un borde sutil para separarlo del fondo */
+}
+#contacto a { 
+    color: var(--brand); /* Color de marca para los enlaces */
+    text-decoration: none; 
+    font-weight: bold;
+}
+#contacto a:hover { 
+    color: #8c2a2a;
 	footer { background: #fff; color: #333; text-align: center; padding: 1rem; margin-top: 2rem; border-top: 1px solid #f1f1f1; }
             footer a { color: #a83232; text-decoration: none; }
             footer a:hover { color: #8c2a2a; }
@@ -126,17 +141,22 @@
 </main>
 
 	<footer id="contacto">
-        <div class="container text-center">
-            <p><a href="https://wa.me/50369739021"><i class="bi bi-whatsapp"></i> ‪+503 6973-9021‬</a></p>
-            <p><a href="tel:‪+50322223333‬"><i class="bi bi-telephone"></i> ‪+503 2222-3333‬</a></p>
-            <p><a href="mailto:contacto@salvadoreanbites.com"><i class="bi bi-envelope"></i> contacto@salvadoreanbites.com</a></p>
-            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank"><i class="bi bi-geo-alt"></i> Unicentro Soyapango, San Salvador</a></p>
-            <small>&copy; 2025 Salvadorean Bite. Todos los derechos reservados.</small>
-        </div>
-    </footer>
+    <div style="max-width:980px; margin:0 auto; padding:0 1rem;">
+        <h3>Ubicación y Contacto</h3>
+        <p><a href="https://wa.me/50369739021"><i class="bi bi-whatsapp"></i> +503 6973-9021</a></p>
+        <p><a href="tel:+50322223333"><i class="bi bi-telephone"></i> +503 2222-3333</a></p>
+        <p><a href="mailto:contacto@salvadoreanbites.com"><i class="bi bi-envelope"></i> contacto@salvadoreanbites.com</a></p>
+        <p>
+            Unicentro Soyapango, San Salvador
+            <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank"><i class="bi bi-geo-alt"></i> Ver en mapa</a>
+        </p>
+        <small>© 2025 Salvadorean Bite. Todos los derechos reservados.</small>
+    </div>
+</footer>
 </body>
 
 </html>
+
 
 
 
