--- a/galeria.html
+++ b/galeria.html
@@ -35,7 +35,7 @@
   </nav>
 
   
-  <h2>nuestros platillos</h2>
+  <h2>Nuestros Platillos</h2>
 
   <!-- ===== Entradas ===== -->
   <h3 id="entradas"></h3>
@@ -158,6 +158,7 @@
 
 </body>
 </html>
+
 
 
 
