--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -4,89 +4,107 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Quiénes somos | Salvadorean Bites</title>
-	<link rel="stylesheet" href="header&footer.css">
 	<style>
+		:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
+		*{box-sizing:border-box}
+		body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text)}
+		header{background:var(--brand);color:#fff;padding:1.25rem 1rem;text-align:center}
+		.brand{display:flex;align-items:center;gap:1rem;justify-content:center}
+		.brand img{width:84px;height:84px;border-radius:50%;object-fit:cover}
+		.brand-text h1{margin:.15rem 0;font-size:1.35rem}
+		.brand-text p{margin:0;font-size:.9rem;opacity:.95}
 
-	footer { background: #fff; color: #333; text-align: center; padding: 1rem; margin-top: 2rem; border-top: 1px solid #f1f1f1; }
-            footer a { color: #a83232; text-decoration: none; }
-            footer a:hover { color: #8c2a2a; }
-	:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text)}
-    header{background:var(--brand);color:#fff;padding:1.25rem 1rem;text-align:center}
-    .logo{width:120px;height:120px;border-radius:50%;display:block;margin:0 auto .5rem;object-fit:cover}
+		nav[aria-label="Navegación principal"]{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin-top:.5rem}
+		nav a{color:#fff;text-decoration:none;margin:.2rem .4rem;font-weight:700;padding:.3rem .5rem;border-radius:6px}
 
-    nav[aria-label="Navegación principal"]{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin-bottom:.5rem}
-    nav a{color:#fff;text-decoration:none;margin:.2rem .4rem;font-weight:700;padding:.3rem .5rem;border-radius:6px}
-    main{max-width:980px;margin:1.5rem auto;padding:0 1rem}
-    .card{background:var(--card);border-radius:10px;padding:1.25rem;box-shadow:0 6px 18px rgba(0,0,0,.06)}
-    .menu-nav{display:flex;gap:.5rem;flex-wrap:wrap;justify-content:center;margin:.5rem 0 1rem}
-    .menu-nav a{background:rgba(168,50,50,.08);color:var(--brand);padding:.35rem .6rem;border-radius:6px;text-decoration:none;font-weight:700}
-    .menu-section{padding:1rem;border-top:1px solid #f1f1f1;margin-top:.5rem}
-    .menu-section:first-of-type{border-top:none;padding-top:0}
+		main{max-width:980px;margin:1.5rem auto;padding:0 1rem}
+		.card{background:var(--card);border-radius:10px;padding:1.25rem;box-shadow:0 6px 18px rgba(0,0,0,.06)}
 
-    header h1, #menu-title { text-align:center; margin:.25rem 0; }
-    .section-title{display:block;text-align:center;margin:0 0 .6rem 0}
-    .section-title h3{color:var(--brand);margin:0;font-size:1.05rem;display:inline-block}
+		.hero{display:grid;grid-template-columns:1fr;gap:1rem;align-items:center;text-align:center;padding:1rem;border-radius:10px;background:linear-gradient(180deg,rgba(168,50,50,.06),rgba(168,50,50,.02))}
+		.hero img{width:100%;max-width:420px;border-radius:10px;object-fit:cover}
+		.hero h2{margin:.25rem 0;color:var(--brand)}
+		.lead{color:var(--muted);margin:0}
+
+		.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem;margin-top:1rem}
+		.box{background:#fff;padding:1rem;border-radius:10px;border:1px solid #f3f0ef}
+		.box h3{margin:.25rem 0;color:var(--brand)}
+		.box p{margin:0;color:var(--muted);line-height:1.45}
+
+		#qs-title{text-align:center}
+
+		.values-list{list-style:none;padding:0;margin:0;font-family:Arial,Helvetica,sans-serif}
+		.values-list li{padding:.5rem 0;border-top:1px dashed #f1efee;font-family:Arial,Helvetica,sans-serif;color:var(--muted);line-height:1.45}
+		.values-list li:first-child{border-top:none}
+
+		footer{max-width:980px;margin:1rem auto 2rem;padding:0 1rem;color:var(--muted);font-size:.92rem;text-align:center}
+
 		
-	main{max-width:980px;margin:1.5rem auto;padding:0 1rem}
-	.card{background:var(--card);border-radius:10px;padding:1.25rem;box-shadow:0 6px 18px rgba(0,0,0,.06)}
-	#qs-title{text-align:center}
-	.lead{color:var(--muted);margin:0}
-
-	.commitment {
-		display:grid;grid-template-columns:1fr;gap:1rem;align-items:center;text-align:center;
-		padding:1rem;border-radius:10px;
-		background:linear-gradient(180deg,rgba(168,50,50,.06),rgba(168,50,50,.02));
-		margin-top:1rem;
-	}
-	.commitment h2 {margin:.25rem 0;color:var(--brand)}
-
-	.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem;margin-top:2rem;}
-	.grid-3 > div { /* Estilo de las ex-cajas 'box' */
-		background:#fff;padding:1rem;border-radius:10px;border:1px solid #f3f0ef;
-	}
-	.grid-3 h3{margin:.25rem 0;color:var(--brand)}
-	.grid-3 p{margin:0;color:var(--muted);line-height:1.45}
-
-	.values-list{list-style:none;padding:0;margin:0}
-	.values-list li{padding:.5rem 0;border-top:1px dashed #f1efee;color:var(--muted);line-height:1.45}
-	.values-list li:first-child{border-top:none}
-
-	@media (max-width:900px){
-		.grid-3{grid-template-columns:repeat(2,1fr);gap:.8rem}
-		.commitment{padding:.8rem}
-		main{margin:1rem auto}
-	}
-	@media (max-width:768px){
-		header{padding:1rem .8rem}
-		nav a{font-size:.9rem}
-		main{padding:0 1rem}
-		.card{padding:1rem}
-		.commitment{padding:.6rem}
-		.commitment h2{font-size:1.1rem}
-		#qs-title{font-size:1.3rem}
-	}
-	@media (max-width:600px){
-		.grid-3{grid-template-columns:1fr;gap:.6rem}
-		.grid-3 > div{padding:.8rem} /* Estilo de las ex-cajas 'box' */
-		.values-list li{padding:.4rem 0}
-		footer{padding:.8rem}
-	}
+		@media (max-width:1024px){
+			main{padding:0 1.5rem}
+			.card{padding:1.5rem}
+		}
+		
+		@media (max-width:900px){
+			.grid-3{grid-template-columns:repeat(2,1fr);gap:.8rem}
+			.hero{padding:.8rem}
+			main{margin:1rem auto}
+		}
+		
+		@media (max-width:768px){
+			header{padding:1rem .8rem}
+			.brand{gap:.8rem}
+			.brand-text h1{font-size:1.2rem}
+			.brand-text p{font-size:.85rem}
+			nav[aria-label="Navegación principal"]{gap:.3rem}
+			nav a{padding:.25rem .4rem;font-size:.9rem}
+			main{padding:0 1rem}
+			.card{padding:1rem}
+			.hero{padding:.6rem}
+			.hero h2{font-size:1.1rem}
+			#qs-title{font-size:1.3rem}
+		}
+		
+		@media (max-width:600px){
+			.grid-3{grid-template-columns:1fr;gap:.6rem}
+			.brand{flex-direction:column;gap:.5rem}
+			.brand img{width:72px;height:72px}
+			.box{padding:.8rem}
+			.values-list li{padding:.4rem 0}
+			footer{padding:0 .8rem}
+		}
+		
+		@media (max-width:480px){
+			header{padding:.8rem .6rem}
+			.brand img{width:64px;height:64px}
+			.brand-text h1{font-size:1.1rem}
+			nav a{padding:.2rem .3rem;margin:.1rem .2rem;font-size:.85rem}
+			main{margin:.8rem auto;padding:0 .8rem}
+			.card{padding:.8rem}
+			.hero{padding:.5rem}
+			#qs-title{font-size:1.2rem}
+			.box{padding:.6rem}
+			.box h3{font-size:.95rem}
+			.box p, .values-list li{font-size:.9rem}
+		}
 	</style>
 </head>
 <body>
-<header>
-	<img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
-	<nav aria-label="Navegación principal">
-		<a href="quienes-somos.html">Quiénes Somos</a>
-		<a href="index.html" >Menú</a>
-		<a href="promos.html">Promociones</a>
+
+<header class="site-header" aria-label="Encabezado">
+	<div class="brand">
+		<img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites">
+		<div class="brand-text">
+			<h1>Salvadorean Bites</h1>
+			<p>Fresh. Local. Tasty.</p>
+		</div>
+	</div>
+
+	<nav class="primary-nav" aria-label="Navegación principal" id="primary-nav">
+		<a href="quienessomos.html">Quiénes Somos</a>
+		<a href="index.html">Menú</a>
 		<a href="galeria.html">Galería</a>
 		<a href="contacto.html">Contáctanos</a>
 	</nav>
-	<h1>Salvadorean Bites</h1>
-	<p>Fresh. Local. Tasty.</p>
 </header>
 
 <main>
@@ -94,46 +112,51 @@
 		<h2 id="qs-title">Quiénes somos</h2>
 		<p class="lead">Somos un restaurante familiar dedicado a compartir los sabores de El Salvador con ingredientes frescos y recetas tradicionales, reinterpretadas con cariño.</p>
 
-		<div class="commitment" role="region" aria-label="Resumen de compromiso">
+		<div class="hero" role="region" aria-label="Resumen">
 			<div>
 				<h2>Nuestro compromiso</h2>
 				<p class="lead">Traer platos caseros y momentos memorables, comprometidos con la calidad, el servicio y la comunidad.</p>
 			</div>
+
 		</div>
 
-		<div class="grid-3">
-			<div aria-labelledby="mision-title">
-				<h3 id="mision-title">Misión</h3>
-				<p>Ofrecer auténtica comida salvadoreña preparada con ingredientes locales, creando experiencias gastronómicas accesibles y acogedoras para familias y amigos.</p>
-			</div>
+		<div style="margin-top:1rem">
+			<div class="grid-3">
+				<div class="box" aria-labelledby="mision-title">
+					<h3 id="mision-title">Misión</h3>
+					<p>Ofrecer auténtica comida salvadoreña preparada con ingredientes locales, creando experiencias gastronómicas accesibles y acogedoras para familias y amigos.</p>
+				</div>
 
-			<div aria-labelledby="vision-title">
-				<h3 id="vision-title">Visión</h3>
-				<p>Ser reconocidos como el restaurante de referencia de la cocina salvadoreña en nuestra región, promoviendo la cultura y el sabor de El Salvador a nuevas audiencias.</p>
-			</div>
+				<div class="box" aria-labelledby="vision-title">
+					<h3 id="vision-title">Visión</h3>
+					<p>Ser reconocidos como el restaurante de referencia de la cocina salvadoreña en nuestra región, promoviendo la cultura y el sabor de El Salvador a nuevas audiencias.</p>
+				</div>
 
-			<div aria-labelledby="valores-title">
-				<h3 id="valores-title">Valores</h3>
-				<ul class="values-list" aria-label="Lista de valores">
-					<li><strong>Calidad:</strong> Seleccionamos ingredientes frescos y técnicas que realzan el sabor tradicional.</li>
-					<li><strong>Honestidad:</strong> Transparencia en el origen y preparación de nuestros platos.</li>
-					<li><strong>Pasión:</strong> Cocinamos con cariño y respeto por nuestras raíces.</li>
-				</ul>
+				<div class="box" aria-labelledby="valores-title">
+					<h3 id="valores-title">Valores</h3>
+					<ul class="values-list" aria-label="Lista de valores">
+						<li><strong>Calidad:</strong> Seleccionamos ingredientes frescos y técnicas que realzan el sabor tradicional.</li>
+						<li><strong>Honestidad:</strong> Transparencia en el origen y preparación de nuestros platos.</li>
+						<li><strong>Pasión:</strong> Cocinamos con cariño y respeto por nuestras raíces.</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
 	</section>
 </main>
 
-	<footer id="contacto">
+<footer id="contacto" class="bg-danger text-light py-4">
         <div class="container text-center">
-            <p><a href="https://wa.me/50369739021"><i class="bi bi-whatsapp"></i> ‪+503 6973-9021‬</a></p>
-            <p><a href="tel:‪+50322223333‬"><i class="bi bi-telephone"></i> ‪+503 2222-3333‬</a></p>
-            <p><a href="mailto:contacto@salvadoreanbites.com"><i class="bi bi-envelope"></i> contacto@salvadoreanbites.com</a></p>
-            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank"><i class="bi bi-geo-alt"></i> Unicentro Soyapango, San Salvador</a></p>
+            <p><a href="https://wa.me/50369739021" class="text-white text-decoration-none"><i class="bi bi-whatsapp"></i> ‪+503 6973-9021‬</a></p>
+            <p><a href="tel:‪+50322223333‬" class="text-white text-decoration-none"><i class="bi bi-telephone"></i> ‪+503 2222-3333‬</a></p>
+            <p><a href="mailto:contacto@salvadoreanbites.com" class="text-white text-decoration-none"><i class="bi bi-envelope"></i> contacto@salvadoreanbites.com</a></p>
+            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank" class="text-white text-decoration-none"><i class="bi bi-geo-alt"></i> Unicentro Soyapango, San Salvador</a></p>
             <small>&copy; 2025 Salvadorean Bite. Todos los derechos reservados.</small>
         </div>
-    </footer>
-</body>
+    </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
