--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Quiénes somos | Salvadorean Bites</title>
+
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="header&footer.css">
+	
 	<style>
 		
 		:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
@@ -162,5 +166,6 @@
 
 </body>
 </html>
+
 
 
