Fix contact form action and update nav link
Updated contact form action URL and corrected navigation link.

--- a/contacto.html
+++ b/contacto.html
@@ -91,10 +91,10 @@
   <header>
     <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
     <nav aria-label="Navegación principal">
+      <a href="quienes-somos.html"aria-current="page" >conocenos</a>
       <a href="index.html" >Menú</a>
-      <a href="galeria.html">Galería</a>
-      <a href="quienes-somos.html"aria-current="page" >Conócenos</a>
       <a href="promos.html">Promociones</a>
+      <a href="galeria.html">Galería</a>
       <a href="contacto.html">Contáctanos</a>
     </nav>
     <h1>Salvadorean Bites</h1>
@@ -102,12 +102,12 @@
   </header>
  
  <!------------------------caja de contacto-------------------------->
-        <div class="container">
-            <section id="contact" style="display: flex; justify-content: center; align-items: center; padding: 2rem;">
-  <div style="width: 100%; max-width: 500px; text-align: center;">
-    <h2 style="margin-bottom: 1.5rem; color: #a83232;">Contáctanos</h2>
-    <form action="localhost" method="post" style="display: flex; flex-direction: column; gap: 1rem; width: 100%;">
-      
+ <main>
+  <div class="container">
+     <section id="contact" style="display: flex; justify-content: center; align-items: center; padding: 2rem;">
+       <div style="width: 100%; max-width: 500px; text-align: center;">
+         <h2 style="margin-bottom: 1.5rem; color: #a83232;">Contáctanos</h2>
+         <form action="https://formspree.io/f/xqayjajq" method="POST" style="display: flex; flex-direction: column; gap: 1rem; width: 100%;">
       <label for="name" style="text-align: left;">Nombre:</label>
       <input type="text" id="name" name="name" required 
              style="padding: 0.75rem; border: 1px solid #ccc; border-radius: 8px; width: 100%;">
@@ -127,9 +127,7 @@
     </form>
   </div>
 </section>
-
-        </div>
-        </main>
+</main>
         <!-- Footer -->
     <footer id="contacto" class="site-footer">
         <div class="footer-inner">
@@ -142,5 +140,3 @@
     </footer>
 </body>
 </html>
-
-
