Enhance contact form with autocomplete attribute
Added autocomplete attribute to the contact form for better user experience.

--- a/contacto.html
+++ b/contacto.html
@@ -107,7 +107,7 @@
      <section id="contact" style="display: flex; justify-content: center; align-items: center; padding: 2rem;">
        <div style="width: 100%; max-width: 500px; text-align: center;">
          <h2 style="margin-bottom: 1.5rem; color: #a83232;">Contáctanos</h2>
-         <form action="https://formspree.io/f/xqayjajq" method="POST" style="display: flex; flex-direction: column; gap: 1rem; width: 100%;">
+         <form action="https://formspree.io/f/xqayjajq" method="POST" autocomplete="off" style="display: flex; flex-direction: column; gap: 1rem; width: 100%;">
       <label for="name" style="text-align: left;">Nombre:</label>
       <input type="text" id="name" name="name" required 
              style="padding: 0.75rem; border: 1px solid #ccc; border-radius: 8px; width: 100%;">
@@ -140,3 +140,4 @@
     </footer>
 </body>
 </html>
+
