--- a/galeria.html
+++ b/galeria.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,27 +16,29 @@
 
 <body>
 
-  <!-- ==================== Navbar ==================== -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-    <div class="container">
-      <a class="navbar-brand fw-bold text-uppercase" href="index.html">Salvadorean Bites</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Menú</a></li>
-          <li class="nav-item"><a class="nav-link active" href="galeria.html">Galería</a></li>
-          <li class="nav-item"><a class="nav-link active" href="quienes-somos.html">Conócenos</a></li>
-          <li class="nav-item"><a class="nav-link active" href="promos.htm">Promociones</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contacto.html">Contáctanos</a></li>
-        </ul>
-      </div>
-    </div>
+  <!-- ==================== Header ==================== -->
+<header>
+  <img 
+    src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" 
+    alt="Salvadorean Bites" 
+    class="logo"
+  />
+
+  <nav aria-label="Navegación principal">
+    <a href="index.html" aria-current="page">Menú</a>
+    <a href="galeria.html">Galería</a>
+    <a href="quienes-somos.html">Conócenos</a>
+    <a href="promos.html">Promociones</a>
+    <a href="contacto.html">Contáctanos</a>
   </nav>
 
+  <h1>Salvadorean Bites</h1>
+  <p>Fresh. Local. Tasty.</p>
+</header>
+
+
   
-  <h2>Nuestros Platillos</h2>
+  <h2>nuestros platillos</h2>
 
   <!-- ===== Entradas ===== -->
   <h3 id="entradas"></h3>
@@ -91,23 +94,19 @@
       </div>
     </div>
   </div>
-<!-- ==================== Footer ==================== -->
-    <footer id="contacto" class="bg-danger text-light py-4">
-        <div class="container text-center">
-            <p><a href="https://wa.me/50369739021" class="text-white text-decoration-none"><i class="bi bi-whatsapp"></i> +503 6973-9021</a></p>
-            <p><a href="tel:+50322223333" class="text-white text-decoration-none"><i class="bi bi-telephone"></i> +503 2222-3333</a></p>
-            <p><a href="mailto:contacto@salvadoreanbites.com" class="text-white text-decoration-none"><i class="bi bi-envelope"></i> contacto@salvadoreanbites.com</a></p>
-            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank" class="text-white text-decoration-none"><i class="bi bi-geo-alt"></i> Unicentro Soyapango, San Salvador</a></p>
-            <small>&copy; 2025 Salvadorean Bite. Todos los derechos reservados.</small>
+
+       <!-- Footer -->
+ <footer id="contacto" class="site-footer">
+        <div class="footer-inner">
+            <p><a href="https://wa.me/50369739021" class="footer-link">📱 +503 6973-9021</a></p>
+            <p><a href="tel:+50322223333" class="footer-link">📞 +503 2222-3333</a></p>
+            <p><a href="mailto:contacto@salvadoreanbites.com" class="footer-link">✉️ contacto@salvadoreanbites.com</a></p>
+            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank" class="footer-link">📍 Unicentro Soyapango, San Salvador</a></p>
+            <small>&copy; 2025 Salvadorean Bites. Todos los derechos reservados.</small>
         </div>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
-</html>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- carrusel -->
   <script>
@@ -158,12 +157,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
