--- a/index.html
+++ b/index.html
@@ -440,25 +440,112 @@
   }
 }
 
+/* ======= header ======= */
+header {
+  background-color: #a43736;
+  color: #fff;
+  text-align: center;
+  padding: 3rem 1rem 2rem;
+}
+
+/* Logo */
+header .logo {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+  margin: 0 auto 1rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Navegacion*/
+header nav {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+}
+
+/* Enlace */
+header nav a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+/* Título principal */
+header h1 {
+  font-size: 2.5rem;
+  margin: 0.5rem 0 0;
+  font-weight: bold;
+}
+
+/* subtitulos */
+header p {
+  font-size: 1.1rem;
+  margin-top: 0.3rem;
+  font-weight: 400;
+}
+
+
+@media (max-width: 768px) {
+  header nav {
+    gap: 1rem;
+  }
+
+  header h1 {
+    font-size: 2rem;
+  }
+
+  header .logo {
+    width: 90px;
+    height: 90px;
+  }
+}
+
+/* estilo del footer */
+    footer {
+      background: var(--brand);
+      color: #fff;
+      padding: 1rem 0;
+      text-align: center;
+    }
+
+    footer a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 700;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+    
   </style>
 </head>
 <body>
     <!-- Navegación -->
-    <nav class="site-nav">
-        <div class="nav-inner">
-            <a class="brand" href="index.html">Salvadorean Bites</a>
-            <input type="checkbox" id="nav-toggle" class="nav-toggle">
-            <label for="nav-toggle" class="nav-toggle-label">☰</label>
-            <div class="nav-links">
-                <a class="nav-link" href="index.html">Menú</a>
-                <a class="nav-link" href="galeria.html">Galería</a>
-                <a class="nav-link" href="quienes-somos.html">Conócenos</a>
-                <a class="nav-link" href="promos.html">Promociones</a>
-                <a class="nav-link" href="contacto.html">Contáctanos</a>
-            </div>
-        </div>
-    </nav>
+<header>
+  <img 
+    src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" 
+    alt="Salvadorean Bites" 
+    class="logo"
+  />
 
+  <nav aria-label="Navegación principal">
+    <a href="index.html" aria-current="page">Menú</a>
+    <a href="galeria.html">Galería</a>
+    <a href="quienes-somos.html">Conócenos</a>
+    <a href="promos.html">Promociones</a>
+    <a href="contacto.html">Contáctanos</a>
+  </nav>
+
+  <h1>Salvadorean Bites</h1>
+  <p>Fresh. Local. Tasty.</p>
+</header>
     <main class="site-main">
         <!-- Hero Section -->
         <section class="hero">
@@ -612,7 +699,7 @@
     </main>
 
     <!-- Footer -->
-    <footer id="contacto" class="site-footer">
+<footer id="contacto" class="site-footer">
         <div class="footer-inner">
             <p><a href="https://wa.me/50369739021" class="footer-link">📱 +503 6973-9021</a></p>
             <p><a href="tel:+50322223333" class="footer-link">📞 +503 2222-3333</a></p>
