--- a/galeria.html
+++ b/galeria.html
@@ -38,7 +38,7 @@
 
 
   
-  <h2>nuestros platillos</h2>
+  <h2>Nuestros Platillos</h2>
 
   <!-- ===== Entradas ===== -->
   <h3 id="entradas"></h3>
@@ -157,3 +157,4 @@
 
 </body>
 </html>
+
