--- a/promos.html
+++ b/promos.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Promociones</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="header&footer.css">
+  <link rel="stylesheet" href="header&footer.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="Tipografia.css">
   <style>
     body {
       background-color: #fff8f0;
@@ -41,14 +43,13 @@
       color: #555;
       font-size: 1rem;
     }
-	footer { background: #a83232; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
-            a.white-link { color: #fff; text-decoration: none; }
-:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
+    footer { background: #a83232; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
+    a.white-link { color: #fff; text-decoration: none; }
+    :root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
     *{box-sizing:border-box}
     body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text)}
     header{background:var(--brand);color:#fff;padding:1.25rem 1rem;text-align:center}
     .logo{width:120px;height:120px;border-radius:50%;display:block;margin:0 auto .5rem;object-fit:cover}
-
     nav[aria-label="Navegación principal"]{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin-bottom:.5rem}
     nav a{color:#fff;text-decoration:none;margin:.2rem .4rem;font-weight:700;padding:.3rem .5rem;border-radius:6px}
     main{max-width:980px;margin:1.5rem auto;padding:0 1rem}
@@ -56,11 +57,10 @@
     .menu-nav{display:flex;gap:.5rem;flex-wrap:wrap;justify-content:center;margin:.5rem 0 1rem}
     .menu-nav a{background:rgba(168,50,50,.08);color:var(--brand);padding:.35rem .6rem;border-radius:6px;text-decoration:none;font-weight:700}
     .menu-section{padding:1rem;border-top:1px solid #f1f1f1;margin-top:.5rem}
-    .menu-section:first-of-type{border-top:none;padding-top:0}	
-header h1, #menu-title { text-align:center; margin:.25rem 0; }
+    .menu-section:first-of-type{border-top:none;padding-top:0}
+    header h1, #menu-title { text-align:center; margin:.25rem 0; }
     .section-title{display:block;text-align:center;margin:0 0 .6rem 0}
     .section-title h3{color:var(--brand);margin:0;font-size:1.05rem;display:inline-block}
-
   </style>
 </head>
 <body>
@@ -134,6 +134,7 @@ header h1, #menu-title { text-align:center; margin:.25rem 0; }
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
