--- a/promos.html
+++ b/promos.html
@@ -5,24 +5,140 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Promociones</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <link rel="stylesheet" href="header&footer.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="Tipografia.css">
+
   <style>
+	  
+    p {
+      font-family: "Source Sans Pro", sans-serif;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.7;
+      margin-bottom: 1rem;
+      color: #333;
+    }
+
+    .carousel-caption p {
+      font-family: "Source Sans Pro", sans-serif;
+      font-size: 1.1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #ffffff;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
+    }
+
+    strong, b {
+      font-family: "Source Sans Pro", sans-serif;
+      font-weight: 700;
+      color: #722F37;
+    }
+
+    em, i {
+      font-family: "Source Sans Pro", sans-serif;
+      font-style: italic;
+      font-weight: 400;
+    }
+
+    ul, ol {
+      font-family: "Source Sans Pro", sans-serif;
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    li {
+      margin-bottom: 0.5rem;
+      font-family: "Source Sans Pro", sans-serif;
+    }
+
+    a:not(.btn):not(.menu-button):not(.btn-reservation) {
+      font-family: "Source Sans Pro", sans-serif;
+      color: #722F37;
+      text-decoration: underline;
+      transition: color 0.3s;
+    }
+
+    a:not(.btn):not(.menu-button):not(.btn-reservation):hover {
+      color: #D4AF37;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-family: "Merriweather", serif;
+      margin: 0 0 1rem 0;
+      line-height: 1.3;
+      color: #722F37;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #722F37;
+      text-align: center;
+      margin-bottom: 1.5rem;
+      border-bottom: 3px solid #D4AF37;
+      padding-bottom: 0.5rem;
+    }
+
+    h2 {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #8B1538;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    h3 {
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #722F37;
+      margin-top: 1.5rem;
+      margin-bottom: 0.8rem;
+    }
+
+    h4 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #8B1538;
+      margin-top: 1.2rem;
+      margin-bottom: 0.6rem;
+    }
+
+    h5 {
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: #722F37;
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+    }
+
+    h6 {
+      font-size: 1rem;
+      font-weight: 600;
+      color: #8B1538;
+      margin-top: 0.8rem;
+      margin-bottom: 0.4rem;
+    }
+
     body {
       background-color: #fff8f0;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Source Sans Pro", sans-serif;
     }
+
     #promociones {
       padding: 60px 20px;
       background-color: #fff;
     }
+
     #promociones h2 {
       text-align: center;
       color: #c0392b;
       margin-bottom: 40px;
       font-weight: bold;
     }
+
     .promo-card {
       background-color: #fefefe;
       border: 1px solid #e6e6e6;
@@ -32,35 +148,137 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.05);
       transition: transform 0.2s ease;
     }
+
     .promo-card:hover {
       transform: scale(1.02);
     }
+
     .promo-card h3 {
       color: #d35400;
       margin-bottom: 15px;
     }
+
     .promo-card p {
       color: #555;
       font-size: 1rem;
     }
-    footer { background: #a83232; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
-    a.white-link { color: #fff; text-decoration: none; }
-    :root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text)}
-    header{background:var(--brand);color:#fff;padding:1.25rem 1rem;text-align:center}
-    .logo{width:120px;height:120px;border-radius:50%;display:block;margin:0 auto .5rem;object-fit:cover}
-    nav[aria-label="Navegación principal"]{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin-bottom:.5rem}
-    nav a{color:#fff;text-decoration:none;margin:.2rem .4rem;font-weight:700;padding:.3rem .5rem;border-radius:6px}
-    main{max-width:980px;margin:1.5rem auto;padding:0 1rem}
-    .card{background:var(--card);border-radius:10px;padding:1.25rem;box-shadow:0 6px 18px rgba(0,0,0,.06)}
-    .menu-nav{display:flex;gap:.5rem;flex-wrap:wrap;justify-content:center;margin:.5rem 0 1rem}
-    .menu-nav a{background:rgba(168,50,50,.08);color:var(--brand);padding:.35rem .6rem;border-radius:6px;text-decoration:none;font-weight:700}
-    .menu-section{padding:1rem;border-top:1px solid #f1f1f1;margin-top:.5rem}
-    .menu-section:first-of-type{border-top:none;padding-top:0}
-    header h1, #menu-title { text-align:center; margin:.25rem 0; }
-    .section-title{display:block;text-align:center;margin:0 0 .6rem 0}
-    .section-title h3{color:var(--brand);margin:0;font-size:1.05rem;display:inline-block}
+
+    footer {
+      background: #a83232;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+
+    a.white-link {
+      color: #fff;
+      text-decoration: none;
+    }
+
+    :root {
+      --brand: #a83232;
+      --bg: #faf6f2;
+      --card: #fff;
+      --text: #333;
+      --muted: #666;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    header {
+      background: var(--brand);
+      color: #fff;
+      padding: 1.25rem 1rem;
+      text-align: center;
+    }
+
+    .logo {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      display: block;
+      margin: 0 auto .5rem;
+      object-fit: cover;
+    }
+
+    nav[aria-label="Navegación principal"] {
+      display: flex;
+      gap: .5rem;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: .5rem;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: .2rem .4rem;
+      font-weight: 700;
+      padding: .3rem .5rem;
+      border-radius: 6px;
+    }
+
+    main {
+      max-width: 980px;
+      margin: 1.5rem auto;
+      padding: 0 1rem;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 10px;
+      padding: 1.25rem;
+      box-shadow: 0 6px 18px rgba(0,0,0,.06);
+    }
+
+    .menu-nav {
+      display: flex;
+      gap: .5rem;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: .5rem 0 1rem;
+    }
+
+    .menu-nav a {
+      background: rgba(168,50,50,.08);
+      color: var(--brand);
+      padding: .35rem .6rem;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 700;
+    }
+
+    .menu-section {
+      padding: 1rem;
+      border-top: 1px solid #f1f1f1;
+      margin-top: .5rem;
+    }
+
+    .menu-section:first-of-type {
+      border-top: none;
+      padding-top: 0;
+    }
+
+    header h1, #menu-title {
+      text-align: center;
+      margin: .25rem 0;
+    }
+
+    .section-title {
+      display: block;
+      text-align: center;
+      margin: 0 0 .6rem 0;
+    }
+
+    .section-title h3 {
+      color: var(--brand);
+      margin: 0;
+      font-size: 1.05rem;
+      display: inline-block;
+    }
   </style>
 </head>
 <body>
@@ -134,6 +352,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
